[package]
name = "private_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "fs", "macros", "io-util"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
prost = "0.11"
tracing = "0.1"
bytes = "1"
async-trait = "0.1"
tap = "1"
anyhow = "1"
bs58 = "0.4"
sha2 = { version = "0.10", features = ["asm"] }
hex = "0.4"

[dependencies.libp2p]
version = "0.50"
features = ["tokio", "gossipsub", "request-response", "identify", "yamux", "websocket", "macros", "ping"]

[dev-dependencies]
tempfile = "3"
