[package]
name = "private_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "fs", "macros", "io-util", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
prost = "0.11"
tracing = "0.1"
bytes = "1"
async-trait = "0.1"
tap = "1"
anyhow = "1"
bs58 = "0.4"
sha2 = { version = "0.10", features = ["asm"] }
hex = "0.4"
once_cell = "1"
itertools = "0.10"
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
http-body = "0.4"

[dependencies.libp2p]
version = "0.50"
features = [
    "tokio",
    "gossipsub",
    "request-response",
    "yamux",
    "websocket",
    "macros",
    "ping",
    "dns",
    "mplex",
    "noise",
    "tcp",
    "pnet",
    "identify"
]

[dev-dependencies]
tempfile = "3"
