[package]
name = "private_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[dependencies]
tokio = { version = "1", features = ["net", "fs", "macros", "io-util", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
prost = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
bytes = "1"
async-trait = "0.1"
tap = "1"
anyhow = "1"
bs58 = "0.4"
sha2 = { version = "0.10", features = ["asm"] }
hex = "0.4"
once_cell = "1"
itertools = "0.10"
http = "0.2"
axum = { version = "0.6", features = ["http2", "multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["compression-br", "fs"] }
ed25519 = { version = "2", features = ["pkcs8", "pem", "alloc"] }
pkcs8 = { version = "0.9", features = ["std"] } # to enable ed25519 error impl std error
clap = { version = "4", features = ["derive"] }
humantime = "2"
byte-unit = { version = "4", default-features = false, features = ["alloc"] }
rand = "0.8"
tokio-util = { version = "0.7", features = ["time"] }
lru = "0.9"
derive_builder = "0.12"

[dependencies.libp2p]
version = "0.50"
features = [
    "tokio",
    "gossipsub",
    "request-response",
    "yamux",
    "websocket",
    "macros",
    "ping",
    "dns",
    "noise",
    "tcp",
    "pnet",
    "identify"
]

[dev-dependencies]
tempfile = "3"
